Part1/ping-pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      volumes: # Define volume
        - name: shared-text
          # emptyDir: {}
          persistentVolumeClaim:
            claimName: logs-claim
      containers:
        - name: ping-pong
          image: aventusm/ping-pong
          volumeMounts: # Mount volume
            - name: shared-text
              mountPath: /files
