Part1/ping-pong/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ping-pong-timestamp-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: 'PathPrefixStrip'
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: split-timestamp-string-service # 111 excercise implementation. timestamp-string-service otherwise
              servicePort: 2345
          - path: /pingpong
            backend:
              serviceName: ping-pong-service
              servicePort: 2346
